# cortex-auth

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  UPDATED_DESIGN.md
.github/workflows/: release.yml  update-homebrew-tap.yml
cortex-cli/: Cargo.toml
cortex-cli/src/: daemon.rs  main.rs
cortex-server/: Cargo.toml
cortex-server/migrations/: 001_initial.sql  002_namespaces.sql  003_token_lifecycle.sql  004_envelope_kek.sql  005_security_hardening.sql  006_notifications.sql  007_ed25519_and_devices.sql  008_admin_token.sql  009_drop_legacy_jwt_secret.sql  010_pending_grants_and_daemon_attestation.sql  011_project_secret_grants_and_jti_revocation.sql  012_project_agent_binding.sql
cortex-server/src/: admin_token.rs  audit.rs  config.rs  crypto.rs  dashboard.rs  db.rs  ed25519_keys.rs  error.rs  kek.rs  lib.rs  main.rs  notifications.rs  rate_limiter.rs  shamir.rs  state.rs
cortex-server/src/api/: admin.rs  agent.rs  daemon.rs  mod.rs
cortex-server/src/models/: agent.rs  audit_log.rs  daemon_session.rs  mod.rs  namespace.rs  notification.rs  pending_grant.rs  policy.rs  project.rs  project_secret_grant.rs  secret.rs
cortex-server/static/: dashboard.html
cortex-server/tests/: integration_test.rs
cortex-skills/: SKILL.md
cortex-skills/references/: api.md
docs/: DESIGN.md  NEXT_STEPS.md  UNCERTAINTIES.md  USAGE.md
homebrew-tap/: README.md
homebrew-tap/Formula/: cortex-auth.rb
