[package]
name = "cortex-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cortex-cli"
path = "src/main.rs"

[[bin]]
name = "cortex-daemon"
path = "src/daemon.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
rpassword = "7"
sha2 = "0.10"
hex = "0.4"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
