[package]
name = "cortex-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "cortex_server"
path = "src/lib.rs"

[[bin]]
name = "cortex-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
base64 = "0.22"
argon2 = "0.5"
rand = "0.8"
handlebars = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower = "0.4"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tokio-rustls = "0.24"
rustls-pemfile = "1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }

[dev-dependencies]
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
